@@ -4,3 +4,22 @@
 # This configuration file is for development only and should NOT be used
 # in production. For example configuration, see the Trino documentation.
 #
+
+#-server
+#-Xmx16G
+#-XX:InitialRAMPercentage=80
+#-XX:MaxRAMPercentage=80
+#-XX:G1HeapRegionSize=32M
+#-XX:+ExplicitGCInvokesConcurrent
+#-XX:+ExitOnOutOfMemoryError
+#-XX:+HeapDumpOnOutOfMemoryError
+#-XX:-OmitStackTraceInFastThrow
+#-XX:ReservedCodeCacheSize=512M
+#-XX:PerMethodRecompilationCutoff=10000
+#-XX:PerBytecodeRecompilationCutoff=10000
+#-Djdk.attach.allowAttachSelf=true
+#-Djdk.nio.maxCachedBufferSize=2000000
+#-XX:+UnlockDiagnosticVMOptions
+#-XX:+UseAESCTRIntrinsics
+#-Dfile.encoding=UTF-8
+#-XX:-G1UsePreventiveGC
